# disnake-ext-plugins

./: .gitignore  pyproject.toml
src/disnake/ext/plugins/: plugin.py
